src/components/pages/SellerDashboard.css
@import url('https://fonts.googleapis.com/css2?family=Karla:wght@700&display=swap');


html,
body {
    margin: 0;
    min-height: 100%;
    min-width: 100%;
}
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box; 
}

.seller-dashboard {
  background: #fff;
  min-height: 100vh;
  min-width: 100vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding-top: 100px; 
}


.dashboard-title {
  text-align: center;
  font-size: 64px;
  font-weight: bold;
  color: black;
  margin-top: 20px;
  margin-bottom: 20px;
  position: relative;
}

.dashboard-grid {
  display: grid;
  grid-template-columns: calc(25% - 30px) 70%;
  gap: 10px; 
  width: 100%;
}


.sidebar {
  padding: 20px;
  background-color: #f8f9fa;
  display: flex;
  flex-direction: column; 
  background: linear-gradient(to bottom, #ffffff 0%, #DDEFFF 100%);
  gap: 20px;
  min-height: 100vh;
}

.sidebar a {
  text-decoration: none;
  color: black;
  padding: 10px;
  margin-bottom: 10px;
  display: block;
  background-color: lightgray;
  border-radius: 5px;
  color: #000;
  font-family: 'Karla', sans-serif;
  font-weight: bold;
  font-size: 25px;
}
.sidebar a.active {
  background-color: #0788FF; 
  color: #ffffff; 
}

.sidebar a:hover {
  background-color: #ccc;
  cursor: pointer;
}

.product-layout {
  display: flex; 
  align-items: center; 
  justify-content: space-between; 
  width: 100%; 
  min-height: 100vh;
  margin-bottom: 20px; 
}

.product-row {
  display: flex;
  justify-content: space-between; 
  align-items: center;
  min-height: 100vh;
  margin-bottom: 20px; 
}

.product-column, .status-column {
  flex: 1;
  padding: 20px;
  background-color: #fff;
  overflow-y: auto; 
  min-height: 100vh;
}

.product-column h3, .status-column h3 {
  margin-bottom: 10px;
  color: #000;
  font-family: 'Karla', sans-serif;
  font-weight: bold;
  min-height: 100vh;
  font-size: 25px;
}
  

